# AntiLel

./: .gitignore  README.md  main.py  messages.txt  pyproject.toml  requirements.txt
cogs/: antilol.py  dbl.py  events.py  help.py  loud.pyw  misc.py
